--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@coreui/coreui": "^2.0.20",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.7",
